--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <hr>
     <br>
     <h2 style="text-align: center; color:red;">Best foods in Bhutan</h2>
-    <a href="./Public/food.html"><img src="../Assests/Images/Best foods.jpg" alt="" width="800"></a> <br>
+    <a href="./Public/food.html"><img src="./Assests/Images/bestfood.jpg" alt="" width="800"></a> <br>
     <hr>
     <br>
     <h2 style="text-align: center; color:red;">My birthday</h2>
-    <a href="./Public/birthday.html"><img src="../Assests/Images/Birthday cake.jpg" alt="" width="800"></a>
+    <a href="./Public/birthday.html"><img src="./Assests/Images/birthday.jpg" alt="" width="800"></a>
 </body>
 </html>
